--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="white">#edf0f2</color>
     <color name="black">#3d6c8f</color>
+    <color name="yellow">#fcdb03</color>
 </resources>
