--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
@@ -23,10 +23,31 @@
 
     </GridLayout>
 
+
+    <Button
+        android:id="@+id/undo_move"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/buttonContainerGridLayout"
+        android:layout_toRightOf="@id/next_move"
+        android:layout_marginLeft="10dp"
+        android:text="Undo!" />
+
     <Button
         android:id="@+id/next_move"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Click me!" />
+        android:layout_below="@+id/buttonContainerGridLayout"
+        android:layout_marginLeft="100dp"
+        android:text="Next!" />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/promo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/next_move"
+        android:layout_centerHorizontal="true"
+        android:text="text"/>
+
+
+</RelativeLayout>
