--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,31 +23,45 @@
 
     </GridLayout>
 
+<!--    <EditText-->
+<!--        android:id="@+id/fen"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="50dp"-->
+<!--        android:layout_below="@+id/buttonContainerGridLayout"/>-->
 
-    <Button
-        android:id="@+id/undo_move"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/buttonContainerGridLayout"
-        android:layout_toRightOf="@id/next_move"
-        android:layout_marginLeft="10dp"
-        android:text="Undo!" />
+<!--    <Button-->
+<!--        android:id="@+id/fenInit"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_below="@+id/fen"-->
+<!--        android:text="wczytaj fen"-->
+<!--        android:onClick="loadPositionFromFen"/>-->
+
+    <TextView
+        android:id="@+id/moves"
+        android:layout_width="match_parent"
+        android:layout_height="125dp"
+        android:layout_below="@+id/buttonContainerGridLayout"
+        android:paddingHorizontal="5dp"
+        android:paddingVertical="5dp"
+        android:scrollbars="vertical"
+        android:background="@color/white" />
 
     <Button
         android:id="@+id/next_move"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/buttonContainerGridLayout"
-        android:layout_marginLeft="100dp"
+        android:layout_below="@id/moves"
+        android:layout_toEndOf="@id/undo_move"
+        android:layout_marginStart="10dp"
         android:text="Next!" />
 
-    <TextView
-        android:id="@+id/promo"
+    <Button
+        android:id="@+id/undo_move"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/next_move"
-        android:layout_centerHorizontal="true"
-        android:text="text"/>
-
+        android:layout_below="@+id/moves"
+        android:layout_marginStart="100dp"
+        android:text="Undo!" />
 
 </RelativeLayout>
