--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -14,8 +14,8 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/buttonContainerGridLayout"
-            android:layout_width="400dp"
-            android:layout_height="400dp"
+            android:layout_width="350dp"
+            android:layout_height="350dp"
             android:padding="5dp"
             android:columnCount="8"
             android:rowCount="8"
@@ -27,7 +27,7 @@
             android:id="@+id/moves"
             android:layout_width="match_parent"
             android:layout_height="125dp"
-            android:layout_below="@+id/buttonContainerGridLayout"
+            android:layout_toEndOf="@+id/buttonContainerGridLayout"
             android:padding="5dp"
             android:scrollbars="vertical"
             android:background="@color/white" />
@@ -46,16 +46,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/moves"
-            android:layout_marginStart="70dp"
+            android:layout_toEndOf="@id/buttonContainerGridLayout"
             android:text="@string/undo_move_text" />
 
         <Button
             android:id="@+id/save"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
             android:layout_below="@+id/moves"
             android:layout_toEndOf="@+id/next_move"
+            android:layout_marginStart="10dp"
             android:text="@string/save_text" />
 
         <Button
@@ -63,6 +63,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
+            android:layout_toEndOf="@id/buttonContainerGridLayout"
             android:text="fen"
             android:layout_below="@+id/undo_move" />
 
@@ -71,6 +72,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
+            android:layout_toEndOf="@id/buttonContainerGridLayout"
             android:text="udostępnij fen"
             android:layout_below="@+id/fen_button"
             android:onClick="shareFen"/>
