add loading correct PGN

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -77,6 +77,26 @@
             android:layout_below="@+id/fen_button"
             android:onClick="shareFen"/>
 
+        <Button
+            android:id="@+id/share_pgn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_toEndOf="@id/buttonContainerGridLayout"
+            android:text="udostępnij pgn"
+            android:layout_below="@+id/share_fen"
+            android:onClick="shareFen"/>
+
+        <Button
+            android:id="@+id/pgn_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_toEndOf="@id/buttonContainerGridLayout"
+            android:text="wczytaj PGN"
+            android:layout_below="@+id/share_pgn"
+            android:onClick="loadGameFromPgn"/>
+
     </RelativeLayout>
 </ScrollView>
 
