--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,14 +23,19 @@
 
         </GridLayout>
 
-        <TextView
-            android:id="@+id/moves"
-            android:layout_width="match_parent"
-            android:layout_height="125dp"
-            android:layout_below="@+id/buttonContainerGridLayout"
-            android:padding="5dp"
-            android:scrollbars="vertical"
-            android:background="@color/white" />
+        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+            <TextView
+                android:id="@+id/moves"
+                android:layout_width="match_parent"
+                android:layout_height="125dp"
+                android:layout_below="@+id/buttonContainerGridLayout"
+                android:padding="5dp"
+                android:scrollbars="vertical"
+                android:background="@color/white" />
+
+        </ScrollView>
 
         <Button
             android:id="@+id/next_move"
