--- a/app/src/main/res/layout/activity_my_games.xml
+++ b/app/src/main/res/layout/activity_my_games.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="20dp"
     android:paddingTop="20dp"
     android:orientation="vertical"
-    tools:context=".MyGamesActivity">
+    tools:context=".activities.MyGamesActivity">
 
     <ListView
         android:id="@+id/my_games"
