--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -2,17 +2,15 @@
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_height="match_parent"
+    android:layout_height="fill_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <RelativeLayout android:layout_height="wrap_content"
         android:layout_width="match_parent"
         xmlns:tools="http://schemas.android.com/tools"
         android:orientation="vertical"
         tools:context=".activities.MainActivity">
 
-        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
+        <GridLayout xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/buttonContainerGridLayout"
             android:layout_width="350dp"
             android:layout_height="350dp"
@@ -32,70 +30,18 @@
             android:scrollbars="vertical"
             android:background="@color/white" />
 
-        <Button
-            android:id="@+id/next_move"
-            android:layout_width="wrap_content"
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_navigation"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/moves"
-            android:layout_toEndOf="@id/undo_move"
-            android:layout_marginStart="10dp"
-            android:text="@string/next_move_text" />
-
-        <Button
-            android:id="@+id/undo_move"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/moves"
             android:layout_toEndOf="@id/buttonContainerGridLayout"
-            android:text="@string/undo_move_text" />
-
-        <Button
-            android:id="@+id/save"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/moves"
-            android:layout_toEndOf="@+id/next_move"
-            android:layout_marginStart="10dp"
-            android:text="@string/save_text" />
-
-        <Button
-            android:id="@+id/fen_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_toEndOf="@id/buttonContainerGridLayout"
-            android:text="fen"
-            android:layout_below="@+id/undo_move" />
-
-        <Button
-            android:id="@+id/share_fen"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_toEndOf="@id/buttonContainerGridLayout"
-            android:text="udostępnij fen"
-            android:layout_below="@+id/fen_button"
-            android:onClick="shareFen"/>
-
-        <Button
-            android:id="@+id/share_pgn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_toEndOf="@id/buttonContainerGridLayout"
-            android:text="udostępnij pgn"
-            android:layout_below="@+id/share_fen"
-            android:onClick="shareFen"/>
-
-        <Button
-            android:id="@+id/pgn_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_toEndOf="@id/buttonContainerGridLayout"
-            android:text="wczytaj PGN"
-            android:layout_below="@+id/share_pgn"
-            android:onClick="loadGameFromPgn"/>
+            android:background="@color/colorPrimary"
+            android:foreground="?attr/selectableItemBackground"
+            app:menu="@menu/bottom_navigation_menu"
+            app:itemBackground="@color/colorPrimary"
+            app:itemIconTint="@drawable/nav_item_color_state"
+            app:itemTextColor="@drawable/nav_item_color_state"/>
 
     </RelativeLayout>
 </ScrollView>
