--- a/app/src/main/res/layout-v21/activity_main.xml
+++ b/app/src/main/res/layout-v21/activity_main.xml
@@ -4,7 +4,8 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <RelativeLayout android:layout_height="wrap_content"
+    <LinearLayout
+        android:layout_height="wrap_content"
         android:layout_width="match_parent"
         xmlns:tools="http://schemas.android.com/tools"
         android:orientation="vertical"
@@ -13,9 +14,9 @@
         <GridLayout
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/buttonContainerGridLayout"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="5dp"
+            android:padding="1dp"
             android:columnCount="8"
             android:rowCount="8"
             tools:context=".activities.MainActivity">
@@ -24,8 +25,7 @@
         <TextView
             android:id="@+id/moves"
             android:layout_width="match_parent"
-            android:layout_height="125dp"
-            android:layout_below="@+id/buttonContainerGridLayout"
+            android:layout_height="wrap_content"
             android:padding="5dp"
             android:scrollbars="vertical"
             android:background="@color/white" />
@@ -34,13 +34,11 @@
             android:id="@+id/bottom_navigation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/moves"
             android:background="@color/colorPrimary"
-            android:foreground="?attr/selectableItemBackground"
             app:menu="@menu/bottom_navigation_menu"
             app:itemBackground="@color/colorPrimary"
             app:itemIconTint="@drawable/nav_item_color_state"
             app:itemTextColor="@drawable/nav_item_color_state"/>
-    </RelativeLayout>
+    </LinearLayout>
 </ScrollView>
 
