--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -1,36 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     android:orientation="vertical"
     tools:context=".activities.NavigationActivity">
 
     <Button
-        android:layout_marginTop="10dp"
         android:id="@+id/new_game_button"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="@string/new_game_button_text"
         android:layout_gravity="center"
-        android:onClick="addNewGame"/>
+        android:onClick="addNewGame"
+        android:textColor="#fff"
+        android:shadowColor="#A8A8A8"
+        android:shadowRadius="11"
+        android:background="@drawable/custom_button"/>
 
     <Button
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="30dp"
         android:id="@+id/my_games_button"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="@string/my_games_button_text"
         android:layout_gravity="center"
-        android:onClick="showMyGames"/>
+        android:onClick="showMyGames"
+        android:textColor="#fff"
+        android:shadowColor="#A8A8A8"
+        android:shadowRadius="11"
+        android:background="@drawable/custom_button"/>
 
     <Button
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="30dp"
         android:id="@+id/about_app"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="@string/about_app_text"
-        android:layout_gravity="center"/>
-
+        android:layout_gravity="center"
+        android:textColor="#fff"
+        android:shadowColor="#A8A8A8"
+        android:shadowRadius="11"
+        android:background="@drawable/custom_button"/>
 </LinearLayout>
