--- a/app/src/main/res/layout/pgn_dialog.xml
+++ b/app/src/main/res/layout/pgn_dialog.xml
@@ -3,9 +3,9 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <TextView
