--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#757b85</color>
+    <color name="colorPrimaryDark">#00695c</color>
+    <color name="colorAccent">#b2dfdb</color>
     <color name="white">#edf0f2</color>
-    <color name="black">#3d6c8f</color>
+    <color name="black">#3b5998</color>
     <color name="yellow">#fcdb03</color>
+<!--    <color name="colorPrimary">#278be3</color>-->
+<!--    <color name="colorPrimaryDark">#0f5998</color>-->
+<!--    <color name="colorAccent">#4075a2</color>-->
+    <color name="colorNavIcon">#dae9f6</color>
+    <color name="colorNavText">#01294b</color>
 </resources>
