--- a/app/src/main/res/layout-v21/activity_main.xml
+++ b/app/src/main/res/layout-v21/activity_main.xml
@@ -25,7 +25,7 @@
         <TextView
             android:id="@+id/moves"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="135dp"
             android:padding="5dp"
             android:scrollbars="vertical"
             android:background="@color/white" />
